--- a/fresh_tomatoes.html
+++ b/fresh_tomatoes.html
@@ -109,14 +109,24 @@
     <h2>Toy Story</h2>
 </div>
 
+<div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="dFizEEX1hps" data-toggle="modal" data-target="#trailer">
+    <img src="https://upload.wikimedia.org/wikipedia/en/c/c9/Pokemon-mewtwo-strikes-back.jpg" width="220" height="342">
+    <h2>Toy Story</h2>
+</div>
+
 <div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="d1_JBMrrYw8" data-toggle="modal" data-target="#trailer">
     <img src="https://upload.wikimedia.org/wikipedia/en/b/b0/Avatar-Teaser-Poster.jpg" width="220" height="342">
-    <h2>Toy Story</h2>
+    <h2>Avatar</h2>
 </div>
 
 <div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="eq1sTNGDXo0" data-toggle="modal" data-target="#trailer">
     <img src="http://upload.wikimedia.org/wikipedia/en/7/77/Dawn_of_the_Planet_of_the_Apes.jpg" width="220" height="342">
     <h2>Dawn Of The Planet Of The Apes</h2>
+</div>
+
+<div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="hIR8Ar-Z4hw" data-toggle="modal" data-target="#trailer">
+    <img src="https://upload.wikimedia.org/wikipedia/en/f/f9/TheAvengers2012Poster.jpg" width="220" height="342">
+    <h2>The Avenger</h2>
 </div>
 
 <div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="Ym3LB0lOJ0o" data-toggle="modal" data-target="#trailer">
@@ -125,8 +135,8 @@
 </div>
 
 <div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="hIR8Ar-Z4hw" data-toggle="modal" data-target="#trailer">
-    <img src="http://upload.wikimedia.org/wikipedia/en/3/37/Captain_America_The_First_Avenger_poster.jpg" width="220" height="342">
-    <h2>Avenger</h2>
+    <img src="https://upload.wikimedia.org/wikipedia/en/f/f9/TheAvengers2012Poster.jpg" width="220" height="342">
+    <h2>The Avenger</h2>
 </div>
 
 <div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="g8evyE9TuYk" data-toggle="modal" data-target="#trailer">
