--- a/fresh_tomatoes.html
+++ b/fresh_tomatoes.html
@@ -111,7 +111,7 @@
 
 <div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="dFizEEX1hps" data-toggle="modal" data-target="#trailer">
     <img src="https://upload.wikimedia.org/wikipedia/en/c/c9/Pokemon-mewtwo-strikes-back.jpg" width="220" height="342">
-    <h2>Toy Story</h2>
+    <h2>Pokemon</h2>
 </div>
 
 <div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="d1_JBMrrYw8" data-toggle="modal" data-target="#trailer">
